# ottopy

./: .pre-commit-config.yaml  pyproject.toml  readme.md  setup.cfg  setup.py  tox.ini
mail/: __init__.py
ottopy/: retry.py  test.py  utils.py
ottopy/dt/: __init__.py  formats.py  regexes.py
ottopy/dt/test/: test_converters.py  test_regexes.py
ottopy/log/: __init__.py  classes.py  consts.py  string_utils.py
ottopy/log/structured/: __init__.py
ottopy/log/structured/test/: test_structured.py
ottopy/log/test/: test_log.py
ottopy/mail/: __init__.py  classes.py  config.py  credentials.json  token.pickle
ottopy/pipelines/: req.py  req_functional.py  req_no_exc.py
ottopy/read/: __init__.py
ottopy/test/: test_retry.py
ottopy/test/pipelines/: web.py
