[tool.poetry]
name = "ottopy"
version = "0.1.0"
description = ""
authors = ["Otto Castle <otto.castle1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"
google = "^2.0.3"
google-api-python-client = "^1.7.11"
google-auth-httplib2 = "^0.0.3"
google-auth-oauthlib = "^0.4.1"
mypy = "^0.761"
pytz = "^2019.3"
returns = "^0.13.0"
structlog = "^20.1.0"
pre-commit = "2.2.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
twisted = "^19.10.0"
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
