[tool.poetry]
name = "ottopy"
version = "0.1.0"
description = ""
authors = ["Otto Castle <otto.castle1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"
mypy = "0.761"
pytz = "^2019.3"
structlog = "^20.1.0"
pre-commit = "2.2.0"
autoflake = "^1.3.1"
pytest = "^5.4.3"
mock = "^4.0.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
twisted = "^19.10.0"
ipython = "^7.13.0"
isort = "^5.1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
